--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
         <div id="wp">
             <h1>League of Legends</h1>
             <h3>操作精華</h3>
-            <video id="yasuo1" title="Yasuo" src="/video/10-8_TW-1786575956_01.webm" controls></video>
-            <video id="leesin1" title="LeeSin" src="/video/10-23_TW-1865937182_02.webm" controls></video>
-            <video id="yone1" title="Yone" src="/video/11-18_TW-1969100147_01.webm" controls></video>
-            <video id="kat1" title="kat" src="/video/11-10_TW-1920132254_01.webm" controls></video>
+            <video id="yasuo1" title="Yasuo" src="video/10-8_TW-1786575956_01.webm" controls></video>
+            <video id="leesin1" title="LeeSin" src="video/10-23_TW-1865937182_02.webm" controls></video>
+            <video id="yone1" title="Yone" src="video/11-18_TW-1969100147_01.webm" controls></video>
+            <video id="kat1" title="kat" src="video/11-10_TW-1920132254_01.webm" controls></video>
         </div>
         <div id="conmutain">
         <div id="conmu">
             <h1>社群</h1>
-            <a href="https://www.facebook.com/profile.php?id=100008061790090"><img src="/img/fb.png" alt=""></a>
-            <a href="line://ti/p/36434037"><img src="/img/line.png" alt=""></a>
-            <a href="https://www.instagram.com/xiaojiazheng878/"><img src="/img/IG.png" alt=""></a>
-            <a href="https://www.youtube.com/channel/UCaDZNoNmOZTbWSdXklhNOow"><img src="/img/youtube.png" alt=""></a>
+            <a href="https://www.facebook.com/profile.php?id=100008061790090"><img src="img/fb.png" alt=""></a>
+            <a href="line://ti/p/36434037"><img src="img/line.png" alt=""></a>
+            <a href="https://www.instagram.com/xiaojiazheng878/"><img src="img/IG.png" alt=""></a>
+            <a href="https://www.youtube.com/channel/UCaDZNoNmOZTbWSdXklhNOow"><img src="img/youtube.png" alt=""></a>
         </div>
     </div>
     </div>
